store-service-export-central1.yaml
apiVersion: v1
kind: Service
metadata:
  name: store
  namespace: store
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  selector:
    app: store
  ports:
  - port: 8080
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: store-central-1 # Specific to this cluster
  namespace: store
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  selector:
    app: store
  ports:
  - port: 8080
    targetPort: 8080
